--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Organizacja TI Hub</title>
+    <title>WIAI TI Hub</title>
   </head>
   <body>
-    <h2>Organizacja <b>TI Hub</b></h2>
+    <h2>WIAI <b>TI Hub</b></h2>
   </body>
 </html>
