--- a/wiai-petla/strona2.html
+++ b/wiai-petla/strona2.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta description="Opsi1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sagma nuts</title>
         <meta http-equiv="refresh" content="2; url=strona3.html">
     </head>
