--- a/index.html
+++ b/index.html
@@ -6,10 +6,38 @@
         <title>TI Hub - WIAI</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
         <link rel="shortcut icon" href="https://tihub.pl/icons/tihub.ico">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/darkmode.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
-        <div class="">
-            <a href="1/" class="list-group-item list-group-item-action">1 Lekcja - <span class="text-primary">Pętla automatycznych przekierowań</span></a>
+        <div id="preloader-wrap">
+            <div id="preloader">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; display: block; shape-rendering: auto;" width="150px" height="150px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+                <circle cx="50" cy="50" r="32" stroke-width="8" stroke="#e15b64" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round">
+                  <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;360 50 50"/>
+                </circle>
+                <circle cx="50" cy="50" r="23" stroke-width="8" stroke="#f8b26a" stroke-dasharray="36.12831551628262 36.12831551628262" stroke-dashoffset="36.12831551628262" fill="none" stroke-linecap="round">
+                  <animateTransform attributeName="transform" type="rotate" dur="1s" repeatCount="indefinite" keyTimes="0;1" values="0 50 50;-360 50 50"/>
+                </circle>
+              </svg>
+            </div>
+          </div>
+        <div class="theme-switch-wrapper bg-bottom-right">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+          </label>
         </div>
+        <!-- Lekcje -->
+        <div class="bg center center-25up bg-rounded">
+            <a href="1/" class="list-group-item list-group-item-action bg">1 Lekcja - <span class="text-primary">Pętla automatycznych przekierowań</span> <span class="bg-muted">(09.09.2021)</span></a>
+            <a href="2/" class="list-group-item list-group-item-action bg">2 Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.09.2021)</span></a>
+            <!--
+                <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
+            -->
+        </div>
+        <script src="assets/js/darkmode.js"></script>
+        <script src="assets/js/preloader.js"></script>
     </body>
 </html>
