--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Lekcje -->
         <div class="bg center center-25up bg-rounded">
             <a href="1/" class="list-group-item list-group-item-action bg">1 Lekcja - <span class="text-primary">Pętla automatycznych przekierowań</span> <span class="bg-muted">(09.09.2021)</span></a>
-            <a href="2/" class="list-group-item list-group-item-action bg">2 Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.09.2021)</span></a>
+            <a href="2/" class="list-group-item list-group-item-action bg">2 Lekcja - <span class="text-primary">Ikony dla strony</span> <span class="bg-muted">(13.09.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
