--- a/2/2.html
+++ b/2/2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" href="./assets/img/pwiomarkiekipa.ico">
+        <link rel="shortcut icon" href="/assets/img/pwiomarkiekipa.ico">
     </head>
     <body>
         <a href="3.html">2 - jpiigmd</a>
