--- a/2/3.html
+++ b/2/3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" href="./assets/img/pwiomarkipiwo.png">
+        <link rel="shortcut icon" href="/assets/img/pwiomarkipiwo.png">
     </head>
     <body>
         <a href="index.html">3 - temerczykrodowity</a>
