--- a/2/index.html
+++ b/2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" href="./assets/img/pawelkremowa.jpg">
+        <link rel="shortcut icon" href="/assets/img/pawelkremowa.jpg">
     </head>
     <body>
         <a href="2.html">1 - jp2gmd</a>
