--- a/4/index.html
+++ b/4/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Znaczniki fizyczne i logiczne</title>
+        <title>Cytaty i listy</title>
     </head>
     <body>
         <!-- jakieś cytaty czy chuj wie co -->
