--- a/5/index.html
+++ b/5/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title</title>
+        <title>Listy</title>
     </head>
     <body>
         <ul type="circle">
@@ -62,6 +62,47 @@
             </ul>
             <li>anticum</li>
             <li>nocum</li>
+        </ol>
+        <hr>
+        <!-- Otwarcie listy -->
+        <ol type="I">
+            <!-- Otwarcie Azji -->
+            <li>Azja
+                <ol>
+                    <li>Chiny</li>
+                    <li>Japonia</li>
+                    <li>Indie</li>
+                </ol>
+            <!-- Zamknięcie Azji -->
+            </li>
+            <!-- Otwarcie Europy -->
+            <li>Europa
+                <ol>
+                    <!-- Otwarcie UE -->
+                    <li>Unia Europejska
+                        <ul>
+                            <li>Polska</li>
+                            <li>Niemcy</li>
+                            <li>Francja</li>
+                            <li>Włochy</li>
+                        </ul>
+                    <!-- Zamknięcie UE -->
+                    </li>
+                    <!-- Otwarcie Rosji -->
+                    <li>Rosja
+                        <ul>
+                            <li>Część Europejska</li>
+                            <li>Syberia</li>
+                        </ul>
+                    <!-- Zamknięcie Rosji -->
+                    </li>
+                    <li>Szwajcaria</li>
+                    <li>Ukraina</li>
+                </ol>
+            <!-- Zamknięcie Europy -->
+            </li>
+            <li>Afryka</li>
+        <!-- Zamknięcie listy -->
         </ol>
     </body>
 </html>
