--- a/5/index.html
+++ b/5/index.html
@@ -104,5 +104,7 @@
             <li>Afryka</li>
         <!-- Zamknięcie listy -->
         </ol>
+        <hr>
+        <p>2<sup>2</sup>=4<br>cum<sub>cum</sub><sup>cum</sup></p>
     </body>
 </html>
