--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="4/" class="list-group-item list-group-item-action bg">4 Lekcja - <span class="text-primary">Cytaty i listy</span> <span class="bg-muted">(16.09.2021)</span></a>
             <a href="5/" class="list-group-item list-group-item-action bg">5 Lekcja - <span class="text-primary">Listy</span> <span class="bg-muted">(20.09.2021)</span></a>
             <a href="6/" class="list-group-item list-group-item-action bg">6 Lekcja - <span class="text-primary">Nagłówki</span> <span class="bg-muted">(23.09.2021)</span></a>
-            <a href="7/" class="list-group-item list-group-item-action bg">7 Lekcja - <span class="text-primary">Odnođniki</span> <span class="bg-muted">(23.09.2021)</span></a>
+            <a href="7/" class="list-group-item list-group-item-action bg">7 Lekcja - <span class="text-primary">Odnośniki</span> <span class="bg-muted">(23.09.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
