--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a href="7/" class="list-group-item list-group-item-action bg">7 Lekcja - <span class="text-primary">Odnośniki</span> <span class="bg-muted">(23.09.2021)</span></a>
             <a href="8/" class="list-group-item list-group-item-action bg">8 Lekcja - <span class="text-primary">Sprawdzian</span> <span class="bg-muted">(27.09.2021)</span></a>
             <a href="9/" class="list-group-item list-group-item-action bg">9 Lekcja - <span class="text-primary">Znacznik IMG</span> <span class="bg-muted">(30.09.2021)</span></a>
+            <a href="10/" class="list-group-item list-group-item-action bg">10 Lekcja - <span class="text-primary">Sekcje DIV</span> <span class="bg-muted">(30.09.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
