--- a/11/index.html
+++ b/11/index.html
@@ -9,6 +9,7 @@
                 border: 1px solid black;
                 width: 50%;
                 text-align: center;
+                box-shadow: 0 0 1em red;
             }
             th {
                 border: 1px solid red;
@@ -16,10 +17,16 @@
             td {
                 border: 1px solid blue;
             }
+            caption {
+                font-size: 1.5rem;
+                font-weight: 600;
+                margin: 0px 0px 10px 0px;
+            }
         </style>
     </head>
     <body>
         <table cellspacing="5px" cellpadding="2px">
+            <caption>Jakaś tabela z czymś czy coś</caption>
             <thead>
                 <tr>
                     <th>Nagłówek 1</th>
@@ -35,7 +42,7 @@
                 <tr>
                     <td>Komórka 1</td>
                     <td rowspan="2">Wysoka Komórka 2</td>
-                    <td>Komórka 3</td>
+                    <th>Pogrubiona Komórka 3</th>
                 </tr>
                 <tr>
                     <td>Komórka 1</td>
