--- a/11/index.html
+++ b/11/index.html
@@ -9,7 +9,7 @@
                 border: 1px solid black;
                 width: 50%;
                 text-align: center;
-                box-shadow: 0 0 1em red;
+                box-shadow: 0 0 1em purple;
             }
             th {
                 border: 1px solid red;
