--- a/11/index.html
+++ b/11/index.html
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td>Komórka 1</td>
-                    <td rowspan="2" onclick="window.open('2.html')">Wysoka Komórka 2</td>
+                    <td rowspan="2" onclick="window.open('2/')">Wysoka Komórka 2</td>
                     <th>Pogrubiona Komórka 3</th>
                 </tr>
                 <tr>
