--- a/11/index.html
+++ b/11/index.html
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td>Komórka 1</td>
-                    <td rowspan="2" onclick="window.open('2/')">Wysoka Komórka 2</td>
+                    <td rowspan="2" id="jp2" onclick="jp2()">Wysoka Komórka 2</td>
                     <th>Pogrubiona Komórka 3</th>
                 </tr>
                 <tr>
@@ -50,5 +50,14 @@
                 </tr>
             </tbody>
         </table>
+        <script>
+            function jp2() {
+                const jp2 = document.getElementById("jp2");
+                jp2.style.width = "206px";
+                jp2.style.height = "47px";
+                jp2.style.background = "url(https://i.imgur.com/Isfx5Am.jpg)";
+                jp2.innerText = "";
+            }
+        </script>
     </body>
 </html>
