--- a/12/index.html
+++ b/12/index.html
@@ -9,14 +9,15 @@
                 border: 1px solid black;
                 width: 50%;
                 text-align: center;
+                background-color: lightblue;
             }
             th {
                 border: 1px solid black;
                 background-color: darkcyan;
             }
             td {
-                background-color: darkgoldenrod;
                 border: 1px solid black;
+                background-color: darkgoldenrod;
             }
             .bg-cyan {
                 background-color: cyan;
