--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </label>
         </div>
         <!-- Lekcje -->
-        <div class="bg center center-25up bg-rounded vh">
+        <div class="bg center center-25up bg-rounded">
             <a href="1/" class="list-group-item list-group-item-action bg">1 Lekcja - <span class="text-primary">Pętla automatycznych przekierowań</span> <span class="bg-muted">(09.09.2021)</span></a>
             <a href="2/" class="list-group-item list-group-item-action bg">2 Lekcja - <span class="text-primary">Ikony dla strony</span> <span class="bg-muted">(13.09.2021)</span></a>
             <a href="3/" class="list-group-item list-group-item-action bg">3 Lekcja - <span class="text-primary">Znaczniki fizyczne i logiczne</span> <span class="bg-muted">(16.09.2021)</span></a>
