--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
             <a href="5/" class="list-group-item list-group-item-action bg">5 Lekcja - <span class="text-primary">Listy</span> <span class="bg-muted">(20.09.2021)</span></a>
             <a href="6/" class="list-group-item list-group-item-action bg">6 Lekcja - <span class="text-primary">Nagłówki</span> <span class="bg-muted">(23.09.2021)</span></a>
             <a href="7/" class="list-group-item list-group-item-action bg">7 Lekcja - <span class="text-primary">Odnośniki</span> <span class="bg-muted">(23.09.2021)</span></a>
-            <a href="8/" class="list-group-item list-group-item-action bg">8 Lekcja - <span class="text-primary">Sprawdzian</span> <span class="bg-muted">(27.09.2021)</span></a>
+            <a href="8/" class="list-group-item list-group-item-action bg">8 Lekcja - <span class="text-primary"><b>Sprawdzian</b> - Odnośniki</span> <span class="bg-muted">(27.09.2021)</span></a>
             <a href="9/" class="list-group-item list-group-item-action bg">9 Lekcja - <span class="text-primary">Znacznik IMG</span> <span class="bg-muted">(30.09.2021)</span></a>
             <a href="10/" class="list-group-item list-group-item-action bg">10 Lekcja - <span class="text-primary">Sekcje DIV</span> <span class="bg-muted">(30.09.2021)</span></a>
             <a href="11/" class="list-group-item list-group-item-action bg">11 Lekcja - <span class="text-primary">Tabele</span> <span class="bg-muted">(04.10.2021)</span></a>
             <a href="12/" class="list-group-item list-group-item-action bg">12 Lekcja - <span class="text-primary">Kolorowanie Tabel</span> <span class="bg-muted">(07.10.2021)</span></a>
+            <a href="13/" class="list-group-item list-group-item-action bg">13 Lekcja - <span class="text-primary"><b>Sprawdzian</b> - Tabele</span> <span class="bg-muted">(07.10.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
