--- a/16/index.html
+++ b/16/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Formularze - Select</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -57,8 +57,6 @@
                         <option selected="selected" value="włoski">włoski</option>
                     </select>
                 </div>
-            </fieldset>
-            <fieldset>
                 <div class="object">
                     <label for="jezyki_5">Języki 5 - Select zagnieżdżone</label>
                     <select class="form-select form-select no-overflow" size="13" multiple name="jezyki_5"
