--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         <div class="theme-switch-wrapper bg-bottom-right">
             <label class="theme-switch" for="checkbox">
-                <input type="checkbox" id="checkbox" />
+                <input type="checkbox" id="checkbox">
                 <div class="slider round"></div>
           </label>
         </div>
