--- a/16/index.html
+++ b/16/index.html
@@ -79,7 +79,19 @@
                         </optgroup>
                     </select>
                 </div>
+                <hr>
+                <div class="object form-outline">
+                    <legend>Textarea</legend>
+                    <textarea class="form-control" name="zyciorys" id="zyciorys" cols="45" rows="5" wrap="on"
+                        placeholder="Wprowadź swój życiorys"></textarea>
+                    <h1 class="h6">Podaj swoje imię</h1>
+                    <input type="text" name="imie" id="imie" value="Podaj imię" readonly>
+                </div>
             </fieldset>
+            <div class="mgtop-5">
+                <button type="submit" name="Wyślij" class="btn btn-success" id="submit">Wyślij</button>
+                <button type="reset" name="Wyczyść" class="btn btn-success" id="reset">Wyczyść</button>
+            </div>
         </form>
     </div>
 </body>
