--- a/16/index.html
+++ b/16/index.html
@@ -83,9 +83,9 @@
                 <div class="object form-outline">
                     <legend>Textarea</legend>
                     <textarea class="form-control" name="zyciorys" id="zyciorys" cols="45" rows="5" wrap="on"
-                        placeholder="Wprowadź swój życiorys"></textarea>
+                        placeholder="Wprowadź swój życiorys" value=""></textarea>
                     <h1 class="h6">Podaj swoje imię</h1>
-                    <input type="text" name="imie" id="imie" value="Podaj imię" readonly>
+                    <input type="text" class="form-control" name="imie" id="imie" placeholder="Jan Kowalski" value="">
                 </div>
             </fieldset>
             <div class="mgtop-5">
