--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a href="14/" class="list-group-item list-group-item-action bg">14 Lekcja - <span class="text-primary">Formularze</span> <span class="bg-muted">(18.10.2021)</span></a>
             <a href="15/" class="list-group-item list-group-item-action bg">15 Lekcja - <span class="text-primary">Formularze - Fieldset</span> <span class="bg-muted">(21.10.2021)</span></a>
             <a href="16/" class="list-group-item list-group-item-action bg">16 Lekcja - <span class="text-primary">Formularze - Select</span> <span class="bg-muted">(25.10.2021)</span></a>
+            <a href="17/" class="list-group-item list-group-item-action bg">17 Lekcja - <span class="text-primary">Formularze - Pattern</span> <span class="bg-muted">(28.10.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
