--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <a href="15/" class="list-group-item list-group-item-action bg">15 Lekcja - <span class="text-primary">Formularze - Fieldset</span> <span class="bg-muted">(21.10.2021)</span></a>
             <a href="16/" class="list-group-item list-group-item-action bg">16 Lekcja - <span class="text-primary">Formularze - Select</span> <span class="bg-muted">(25.10.2021)</span></a>
             <a href="17/" class="list-group-item list-group-item-action bg">17 Lekcja - <span class="text-primary">Formularze - Pattern</span> <span class="bg-muted">(28.10.2021)</span></a>
-            <a href="18/" class="list-group-item list-group-item-action">18 Lekcja - <span class="text-primary">Formularze - Pola z dodatkowym wyborem</span> <span class="bg-muted">(04.11.202x)</span></a>
+            <a href="18/" class="list-group-item list-group-item-action bg">18 Lekcja - <span class="text-primary">Formularze - Pola z dodatkowym wyborem</span> <span class="bg-muted">(04.11.2021)</span></a>
             <!--
-                <a href="x/" class="list-group-item list-group-item-action">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
+                <a href="x/" class="list-group-item list-group-item-action bg">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
         </div>
         <script src="assets/js/darkmode.js"></script>
