"loop" property added to 1 video

--- a/20/index.html
+++ b/20/index.html
@@ -19,7 +19,7 @@
         <source src="src/ye.mov" type="video/mp4">
         Twoja przeglądarka nie wspiera znacznika video.
     </video>
-    <video style="position:absolute;right:0" width="320" height="240" autoplay muted>
+    <video style="position:absolute;right:0" width="320" height="240" autoplay muted loop>
         <source src="src/ye.mp4" type="video/mp4">
         <source src="src/ye.mov" type="video/mp4">
         Twoja przeglądarka nie wspiera znacznika video.
