--- a/21/index.html
+++ b/21/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>CSS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="alternate stylesheet" href="style_alt.css" title="Styl alternatywny">
 </head>
