--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a href="21/" class="list-group-item list-group-item-action bg">21 Lekcja - <span class="text-primary">CSS</span> <span class="bg-muted">(15.11.2021)</span></a>
             <a href="22/" class="list-group-item list-group-item-action bg">22 Lekcja - <span class="text-primary">CSS - Style dla mediów</span> <span class="bg-muted">(18.11.2021)</span></a>
             <a href="23/" class="list-group-item list-group-item-action bg">23 Lekcja - <span class="text-primary">CSS - Klasy</span> <span class="bg-muted">(18.11.2021)</span></a>
+            <a href="24/" class="list-group-item list-group-item-action bg">24 Lekcja - <span class="text-primary"><b>Sprawdzian</b> - Pseudo-klasy</span> <span class="bg-muted">(16.12.2021)</span></a>
             <!--
                 <a href="x/" class="list-group-item list-group-item-action bg">x Lekcja - <span class="text-primary">x</span> <span class="bg-muted">(x.x.202x)</span></a>
             -->
